# easy-run

./: .travis.yml  CMakeLists.txt  README.md  conanfile.txt
res/: CMakeLists.txt  net.azubieta.rundialog-qt.desktop
src/: CMakeLists.txt  MainDialog.ui  main.cpp
